--- a/JokePop/build.gradle
+++ b/JokePop/build.gradle
@@ -1,16 +1,14 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.0"
 
     defaultConfig {
-        applicationId "github.vatsal.gradle.builditbigger"
-        minSdkVersion 15
+        minSdkVersion 11
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
-        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -22,9 +20,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    // Added for AdMob
+    testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.0'
-    compile 'com.google.android.gms:play-services-ads:9.2.1'
-    compile project(path: ':backend', configuration: 'android-endpoints')
-    compile project(path: ':joker')
 }
