--- a/JokePop/src/main/AndroidManifest.xml
+++ b/JokePop/src/main/AndroidManifest.xml
@@ -6,6 +6,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true">
 
+        <activity
+            android:name=".JokePoper"
+            android:theme="@style/Theme.AppCompat.Dialog" />
+
     </application>
 
 </manifest>
