feat: Added jokeTask testcase chore: disabled multidex

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,9 @@ android {
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
-        multiDexEnabled true
+        multiDexEnabled false
+        testInstrumentationRunner "android.test.InstrumentationTestRunner"
+
     }
     buildTypes {
         release {
